reading from input without loop